--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,12 @@ authors = ["Zachary P. Christensen <zchristensen7@gmail.com>"]
 version = "0.1.2"
 
 [deps]
+IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
 MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
+Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
 
 [compat]
+IfElse = "0.1.0"
 MappedArrays = "0.3"
 julia = "1.4, 1.5"
+Static = "0.3"
