--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,6 @@ MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
 Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
 
 [compat]
-MappedArrays = "0.3"
-Static = "0.5"
+MappedArrays = "0.3, 0.4"
+Static = "0.5, 0.6, 0.7, 0.8, 1.0, 1.1"
 julia = "1.4, 1.5"
